--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <!-- End Search -->
         </div>
 
-        <div id="slider" style="background-image: url('assets/img/img-slider/sl-1.jpeg');">
+        <div id="slider" style="background-image: url('../assets/img/img-slider/sl-1.jpeg');">
             <div class="text-content">
                 <h3 class="text-heading">Ha Noi</h3>
                 <div class="text-description">Sky Tour 2019: "Sếp" Sơn Tùng M-TP khiến Sky phải đặt câu hỏi lớn!</div>
@@ -61,15 +61,15 @@
                 <div class="members-list">
                     <div class="member-item">
                         <p class="member-name">Sơn Tùng</p>
-                        <img src="assets/img/member/sontung-1.jpg" alt="Sơn Tùng M-TP" class="member-img">
+                        <img src="../assets/img/member/sontung-1.jpg" alt="Sơn Tùng M-TP" class="member-img">
                     </div>
                     <div class="member-item">
                         <p class="member-name">Hải Tú</p>
-                        <img src="assets/img/member/haitu-1.jpg" alt="Hải Tú" class="member-img">
+                        <img src="../assets/img/member/haitu-1.jpg" alt="Hải Tú" class="member-img">
                     </div>
                     <div class="member-item">
                         <p class="member-name">Kay Trần</p>
-                        <img src="assets/img/member/kaytran-1.jpg" alt="Kay Trần" class="member-img">
+                        <img src="../assets/img/member/kaytran-1.jpg" alt="Kay Trần" class="member-img">
                     </div>
                 </div>
                 
@@ -86,7 +86,7 @@
                     </ul>
                     <div class="places-list row">
                         <div class="place-item col">
-                            <img src="assets/img/places/hanoi.jpg" alt="newyork" class="place-img">
+                            <img src="../assets/img/places/hanoi.jpg" alt="newyork" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">Hà Nội</h3>
                                 <p class="place-time">Fri 27 Nov 2016</p>
@@ -95,7 +95,7 @@
                             </div>
                         </div>
                         <div class="place-item col">
-                            <img src="assets/img/places/danang.jpg" alt="newyork" class="place-img">
+                            <img src="../assets/img/places/danang.jpg" alt="newyork" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">Đà Nẵng</h3>
                                 <p class="place-time">Sat 28 Nov 2016</p>
@@ -104,7 +104,7 @@
                             </div>
                         </div>
                         <div class="place-item col">
-                            <img src="assets/img/places/tp-hcm.jpg" alt="newyork" class="place-img">
+                            <img src="../assets/img/places/tp-hcm.jpg" alt="newyork" class="place-img">
                             <div class="place-body">
                                 <h3 class="place-heading">Tp. Hồ Chí Minh</h3>
                                 <p class="place-time">Sun 29 Nov 2016</p>
@@ -149,15 +149,15 @@
             </div>
             <!-- MAP -->
             <div class="map-section">
-                <img src="assets/img/maps.PNG" alt="map">
+                <img src="../assets/img/maps.PNG" alt="map">
             </div>
         </div>
 
         <div id="footer">
             <div class="socials-list">
-                <a href="#"><i class="ti-facebook"> </i></a>
-                <a href="#"><i class="ti-instagram"> </i></a>
-                <a href="#"><i class="ti-youtube"> </i></a>
+                <a href="https://www.facebook.com/go.to.beddd/"><i class="ti-facebook"> </i></a>
+                <a href="https://www.instagram.com/"><i class="ti-instagram"> </i></a>
+                <a href="https://www.youtube.com/"><i class="ti-youtube"> </i></a>
                 <a href="#"><i class="ti-pinterest"> </i></a>
                 <a href="#"><i class="ti-twitter"> </i></a>
                 <a href="#"><i class="ti-linkedin"> </i></a>
